--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ img {
 	border-radius: 10px;
 	padding: 70px;
 	background-color: rgba(0, 0, 0, 0.685);
+	box-shadow: 10px 10px 15px rgb(10, 10, 10);
 }
 span {
 	font-size: 200px;
