--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ span {
 button {
 	background-color: rgba(169, 125, 23, 0);
 	border: none;
+	outline: none;
 	font-size: 35px;
 	padding: 10px;
 	margin: 0 15px;
@@ -39,7 +40,7 @@ button {
 	font-family: 'Zhi Mang Xing', cursive;
 }
 button:hover {
-	border: 2px solid #860101;
+	border: 2px solid #701919;
 	border-radius: 5px;
 	cursor: pointer;
 }
